# managed-service-minions2

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .yamllint  AGENTS.md  README.md  agent-led-development.md  delivery-specification.md  lessons.md
.agents/: PLANS.md
.plugin/: plugin.json
adrs/: adr-012-azure-service-bus-async-queue.md  adr-021-prompt-lifecycle.md  readme.md
agents/: security-auditor.md
commands/: review-pr.yaml  security-scan.yaml  triage-ticket.yaml
dashboard/: package-lock.json  package.json
docker/: Dockerfile.dashboard  Dockerfile.goose-serve  Dockerfile.slack-bot  Dockerfile.teams-bot
docs/: agent-build-team-overview.md  agent-led-development.md  azure-architecture.md  build-discoveries.md  canary-deployment.md  dashboard-design.md  delivery-specification.md  deployment-guide.md  disaster-recovery.md  error-handling.md  foundry-integration-design.md  gap-analysis.md  goose-capabilities-and-usage.md  goose-changes-required.md  high-level-design.md  how-goose-works-with-llms.md  logical-architecture.md  low-level-design.md  minions-overview.html  monitoring-design.md  physical-architecture.md  production-runbook.md  scheduled-triggers-design.md  skills-and-roles.md  testing-strategy.md
hooks/: hooks.json  session-end.sh  session-start.sh
infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
mcp-servers/toolshed/: Cargo.toml
mcp-servers/toolshed/src/: allowlist.rs  logger.rs  main.rs  proxy.rs  rate_limiter.rs
rules/: allowlist-rules.md
scripts/: init-db.sql
(+67 files in other folders)
