[package]
name = "goose-toolshed"
version = "0.1.0"
edition = "2021"
description = "MCP Toolshed — shared tool governance: allowlists, rate limiting, audit logging"

[dependencies]
anyhow = "1"
rmcp = { version = "0.4", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
